 * Fix: Null characters in URLs no longer crash the redirect middleware on PostgreSQL (Andrew Crewdson, Matt Westcott)
 * Fix: Permission checks no longer prevent a non-live page from being unscheduled (Abdulmalik Abdulwahab)
 * Fix: Copy-paste between Draftail editors now preserves all formatting/content (Thibaud Colas)


2.1.1 (04.07.2018)
~~~~~~~~~~~~~~~~~~

 * Fix: Site.get_site_root_paths() preferring other sites over the default when some sites share the same root_page (Andy Babic)
 * Fix: Rich text image chooser no longer skips format selection after a validation error (Matt Westcott)
 * Fix: Null characters in URLs no longer crash the redirect middleware on PostgreSQL (Matt Westcott)


2.1 (22.05.2018)
~~~~~~~~~~~~~~~~

 * Add `HelpPanel` to add HTML within an edit form (Keving Chung)
 * Added direct profile picture upload to account preferences (Daniel Chimeno, Pierre Geier, Matt Westcott)
 * Added API endpoint for finding pages by HTML path (Karl Hobley)
 * Added time zone setting to account preferences (David Moore)
 * Added Elasticsearch 6 support (Karl Hobley)
 * Persist tab hash in URL to allow direct navigation to tabs in the admin interface (Ben Weatherman)
 * Animate the chevron icon when opening sub-menus in the admin (Carlo Ascani)
 * Look through the target link and target page slug (in addition to the old slug) when searching for redirects in the admin (Michael Harrison)
 * Remove support for IE6 to IE9 from project template (Samir Shah)
 * Remove outdated X-UA-Compatible meta from admin template  (Thibaud Colas)
 * Add JavaScript source maps in production build for packaged Wagtail (Thibaud Colas)
 * Removed `assert` statements from Wagtail API (Kim Chee Leong)
 * Update `jquery-datetimepicker` dependency to make Wagtail more CSP-friendly (`unsafe-eval`) (Pomax)
 * Added error notification when running the `wagtail` command on Python <3.4 (Matt Westcott)